# Three-game-themed-group-projects

./: CMakeLists.txt  README.md
Counter_Strike/: CMakeLists.txt
Counter_Strike/include/: Defines.hpp  GameController.hpp  Market.hpp  Player.hpp
Counter_Strike/include/gunHeaders/: DesertEagle.hpp  Glock.hpp  Pistol.hpp
Counter_Strike/src/: GameController.cpp  Player.cpp  main.cpp
Counter_Strike/src/gunsSrc/: DesertEagle.cpp  Glock.cpp  Pistol.cpp
Starcraft/: CMakeLists.txt
Starcraft/include/: BattleCruser.hpp  BattleField.hpp  Carrier.hpp  Defines.hpp  Phoenix.hpp  ProtossFleet.hpp  TerranFleet.hpp  Viking.hpp
Starcraft/src/: BattleCruser.cpp  BattleField.cpp  Carrier.cpp  Phoenix.cpp  ProtosFleet.cpp  TerranFleet.cpp  Viking.cpp  main.cpp
Starcraft/testing/: terranTesting.cpp
Warcraft/: CMakeLists.txt
Warcraft/include/: Casting.hpp  Defines.hpp  Spell.hpp
Warcraft/include/heroHeaders/: Archmage.hpp  DeathKnight.hpp  DrawRanger.hpp  Hero.hpp
Warcraft/src/: Casting.cpp  Spell.cpp  main.cpp
Warcraft/src/heroSrc/: Archmage.cpp  DeathKnight.cpp  DrawRanger.cpp  Hero.cpp
